# traversal

./: .env.example  .gitignore  Makefile  README.md  dev_bootstrap.sh  dev_up.sh  docker-compose.yml
services/dagster/: Dockerfile  README.md  dagster.dev.yaml  dagster.yaml  pyproject.toml  workspace.yaml
services/dagster/src/health_platform/: definitions.py  resources.py
services/dagster/src/health_platform/assets/: __init__.py  bootstrap_assets.py  intake_assets.py  layout_assets.py  validation_assets.py
services/dagster/src/health_platform/canonical/: __init__.py  assets.py
services/dagster/src/health_platform/gold_canonical/: __init__.py  engine_duckdb.py  jobs.py  sensors.py
services/dagster/src/health_platform/gold_submitter/: __init__.py  engine_duckdb.py  jobs.py  sensors.py
services/dagster/src/health_platform/intake/: __init__.py  classify.py  constants.py  filename_conventions.py  fingerprint.py  grouping.py  jobs.py  manifest.py  object_store.py  processing.py  sensors.py
services/dagster/src/health_platform/layouts/: enrollment_v1.json  medical_v1.json  members_v1.json  pharmacy_v1.json
services/dagster/src/health_platform/parse/: __init__.py  engine_duckdb.py  jobs.py  sensors.py
services/dagster/src/health_platform/sensors/: inbox_sensors.py
services/dagster/src/health_platform/utils/: db.py  duckdb_s3.py  object_store.py  s3.py
services/dagster/src/health_platform_tests/: test_intake_integration.py
services/dagster/tests/e2e/: test_synthea_ingest_e2e.py
services/dagster/tests/e2e/helpers/: runtime.py
services/dagster/tests/integration/: test_intake_submission_registration.py
(+61 files in other folders)
